--- a/0-/Versioning.mediawiki
+++ b/0-/Versioning.mediawiki
@@ -11,9 +11,9 @@
 * [[Release:DrHouse|DrHouse]] - Released 2006-12-02
 * DrILostMyFloppies
 * [[Release:DrJekyll|DrJekyll]] - Testing phase
-* DrKosmos
+* [[Release:DrKormos|DrKosmos]] - Release 2007-11-15 (10 years!)
 * DrLecter
-* DrMcCoy
+* DrMcCoy, DrMcKay
 * DrNo
 ...
 * DrStrangelove
