--- a/0-/Versioning.mediawiki
+++ b/0-/Versioning.mediawiki
@@ -11,7 +11,7 @@
 * [[Release:DrHouse|DrHouse]] - Released 2006-12-02
 * DrILostMyFloppies
 * [[Release:DrJekyll|DrJekyll]] - Testing phase
-* [[Release:DrKosmosâ€Ž|DrKosmos]] - Release 2007-11-15 (10 years!)
+* [[Release:DrKosmos|DrKosmos]] - Release 2007-11-15 (10 years!)
 * DrLecter
 * DrMcCoy, DrMcKay
 * DrNo
