--- a/0-/Clientlist.mediawiki
+++ b/0-/Clientlist.mediawiki
@@ -11,6 +11,7 @@ All current clients should be found here.
 {{ClientTableEntry|Camio| Graphical / GTK | Python | in development | Small dock with basic commands }}
 {{ClientTableEntry|Chalyx| Library | Python | in development | Flexible modular library for XMMS2/MPD clients }}
 {{ClientTableEntry|Cocopapa| console | C | in development | Complex Collection Pattern Parser }}
+{{ClientTableEntry|Crystalxmms| Graphical | Java | in development | Look based on crystal icons }}
 {{ClientTableEntry|Dabra| Graphical / libnotify | C | in development | Provides desktop notifications }}
 {{ClientTableEntry|EkoXMMS2| X-Chat Plugin | C | in development | Small player integrated into X-Chat }}
 {{ClientTableEntry|Eloquence| Plugin for E17 | C | in development | themeable desktop module }}
