--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -273,6 +273,8 @@ RELATED:
 |CAN_SEEK||Whether seeking is possible with the currently played stream (UIs/frontends can then enable/disable seeking controls)
 |-
 |CAN_PROVIDE_METADATA||Whether metadata can be acquired for the currently played stream/source using GetMetadata at all.
+|-
+|CAN_HAS_TRACKLIST||Whether the media player can hold a list of several items
 |}
 
 Note that the caps are a bitfield, currently defined as:
@@ -285,6 +287,7 @@ Note that the caps are a bitfield, currently defined as:
           CAN_PLAY              = 1 << 3,
           CAN_SEEK              = 1 << 4,
           CAN_PROVIDE_METADATA  = 1 << 5,
+          CAN_HAS_TRACKLIST     = 1 << 6
 
 ==== VolumeSet ====
 Sets the volume (argument must be in [0;100])
