--- a/0-/MPRIS.mediawiki
+++ b/0-/MPRIS.mediawiki
@@ -74,6 +74,8 @@ Makes the "Media Player" exit.
 
 === /TrackList object methods ===
 
+Note that if CAN_HAS_TRACKLIST is false, the methods described below must be implemented as no-ops, except GetMetadata (which is valid only if given argument is 0), GetCurrentTrack (which always returns 0), GetLength (which will return 0 or 1), and AddTrack
+
 ==== GetMetadata ====
 Gives all meta data available for element at given position in the [[#"TrackList"|TrackList]]
 Each dict entry is organized as follows
