/* Seems like you are using a non-standard buildsystem, why not Make? */
Levitation import of page 788 rev 8078.

--- a/0-/FAQ.mediawiki
+++ b/0-/FAQ.mediawiki
@@ -135,7 +135,7 @@ The seperator between different sockets here is ';'.
 === Seems like you are using a non-standard buildsystem, why not Make? ===
 : Make is a really good buildsystem, although to get all functionality needed for a bigger project you'll need automake, autoconf and libtool. We had a lot of problems getting these tools to do what we wanted, so we evaluated the alternatives. [http://www.scons.org/refer.php SCons] is a good alternative. If you do not want to install Python and SCons on your system, there will be [[Download_XMMS2#Binary_Packages | binaries]] available for the most common platforms. See also: [[Build system requirements]]
 
-: We're in the process of switching to [http://freehackers.org/~tnagy/bksys.html Waf], which is even better-suited to XMMS2. As a bonus, it's also more lightweight and a standalone version ships with XMMS2.
+: We're in the process of switching to [http://code.google.com/p/waf/ Waf], which is even better-suited to XMMS2. As a bonus, it's also more lightweight and a standalone version ships with XMMS2.
 
 === Why can't I use multiple output plugins at the same time? I want to listen to music and act as a stream source ===
 : The possibility of multiple outputs involves a nontrivial solution. The biggest problem is keeping all of the outputs in sync with each other. Each output must pull audio data from a buffer following the last decoder or effect plugin in the xform chain at a rate determined by the samplerate of the underlying device. For example, streaming audio will have an exact bitrate since no actual audio hardware is used for obtaining audio data, but a soundcard's samplerate may vary by a few Hertz with temperature, components, and voltage. We end up with an ever growing buffer (if the buffer holds data longer for slower outputs) or dropped samples (if the data is destroyed after the faster output has read it).
