Levitation import of page 1228 rev 8081.

--- a/0-/Versioning.mediawiki
+++ b/0-/Versioning.mediawiki
@@ -12,8 +12,8 @@
 * DrILostMyFloppies
 * [[Release:DrJekyll|DrJekyll]] - Testing phase
 * [[Release:DrKosmos|DrKosmos]] - Release 2007-11-15 (10 years!)
-* DrLecter
-* DrMcCoy, DrMcKay, Dr. Matt Destruction
+* DrLecter, DrLivingstone (I presume)
+* DrMcCoy, DrMcKay, Dr. Matt Destruction, Dr Mabuse
 * DrNo
 ...
 * DrStrangelove
